feat: signal paging and sorting